Build: 2.0.0 - 2021/12/12
- Initial port to Minecraft 1.18

Build: 1.0.1 - 2021/02/12
- Fix server initialization error

Build: 1.0.0 - 2021/02/10
- Initial release