@@ -3,8 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.18.1
-forge_version=39.0.0
-jei_version=1.18.1:9.1.0.44
+minecraft_version=1.18.2
+forge_version=40.0.3
+jei_version=1.18.2:9.4.1.117
 #Mod Info
-version=2.1.0
+version=2.2.0
