@@ -1,0 +1,22 @@
+package com.haoict.tiab.utils;
+
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+
+public class Helpers {
+  public static String withSuffix(int count) {
+    if (count < 1000) return "" + count;
+    int exp = (int) (Math.log(count) / Math.log(1000));
+    return String.format("%.1f%c",
+        count / Math.pow(1000, exp),
+        "kMGTPE".charAt(exp - 1));
+  }
+
+  private static final BigDecimal TWENTY = new BigDecimal(20);
+
+  public static String ticksInSeconds(int ticks) {
+    BigDecimal value = new BigDecimal(ticks);
+    value = value.divide(TWENTY, 1, RoundingMode.HALF_UP);
+    return value.toString();
+  }
+}
