@@ -5,4 +5,5 @@ import net.minecraft.network.chat.Style;
 
 public final class Styles {
     public static final Style GREEN = Style.EMPTY.applyFormat(ChatFormatting.GREEN);
+    public static final Style GRAY_ITALIC = Style.EMPTY.applyFormat(ChatFormatting.GRAY).withItalic(true);
 }
