@@ -1,5 +1,8 @@
 {
   "itemGroup.tiab_creative_tab_name": "Time in a bottle",
   "item.tiab.time_in_a_bottle": "Time in a bottle",
-  "item.tiab.time_in_a_bottle.tooltip.stored_time": "Stored time %s:%s:%s"
+  "item.tiab.time_in_a_bottle.tooltip.stored_time": "Stored time %s:%s:%s",
+  "item.tiab.time_in_a_bottle_fe": "Time in a bottle FE",
+  "item.tiab.time_in_a_bottle_fe.tooltip": "Time in a bottle, but uses FE/RF",
+  "item.tiab.time_in_a_bottle_fe.tooltip.stored_energy": "Energy: %s (%s FE)"
 }
